# Luckfox_Pico_Mini_B_CQUT_valore

./: README.md
MainCode/: Init.py  ONESEND.py  Photo.cpp  inittab  readME.md  wpa_supplicant
MainCode/init.d/: mystartUp
Recieve_Picture/: CMakeLists.txt  main.cpp
Recieve_radar_2/: main.cpp
Recieve_riada/: CMakeLists.txt  main.cpp
